--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo": "~50.0.14",
     "expo-av": "~13.10.5",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
